rust/libyrs.h


typedef struct YDoc {} YDoc;
typedef struct Branch {} Branch;
typedef struct YUndoManager {} YUndoManager;
typedef struct YSubscription {} YSubscription;
#define ERR_CODE_IO 1
#define ERR_CODE_VAR_INT 2
#define ERR_CODE_EOS 3
#define ERR_CODE_UNEXPECTED_VALUE 4
#define ERR_CODE_INVALID_JSON 5
#define ERR_CODE_OTHER 6
typedef struct TransactionInner TransactionInner;
typedef YDoc YDoc;
typedef Branch Branch;
typedef YSubscription YSubscription;
typedef struct YStateVector {
  uint32_t entries_count;
  uint64_t *client_ids;
  uint32_t *clocks;
} YStateVector;
typedef struct YIdRangeSeq {
  uint32_t len;
  struct YIdRange *seq;
} YIdRangeSeq;
typedef struct YDeleteSet {
  uint32_t entries_count;
  uint64_t *client_ids;
  struct YIdRangeSeq *ranges;
} YDeleteSet;
typedef struct YAfterTransactionEvent {
  struct YStateVector before_state;
  struct YStateVector after_state;
  struct YDeleteSet delete_set;
} YAfterTransactionEvent;
typedef struct YSubdocsEvent {
  uint32_t added_len;
  uint32_t removed_len;
  uint32_t loaded_len;
  YDoc **added;
  YDoc **removed;
  YDoc **loaded;
} YSubdocsEvent;
typedef struct TransactionInner YTransaction;
typedef struct YPendingUpdate {
  struct YStateVector missing;
  char *update_v1;
  uint32_t update_len;
} YPendingUpdate;
typedef struct YTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YTextEvent;
typedef struct YMapEvent {
  const void *inner;
  const TransactionMut *txn;
} YMapEvent;
typedef struct YArrayEvent {
  const void *inner;
  const TransactionMut *txn;
} YArrayEvent;
typedef struct YXmlEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlEvent;
typedef struct YXmlTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlTextEvent;
typedef struct YWeakLinkEvent {
  const void *inner;
  const TransactionMut *txn;
} YWeakLinkEvent;
typedef struct YEvent {
  int8_t tag;
  union YEventContent content;
} YEvent;
typedef struct YUndoEvent {
  char kind;
  const char *origin;
  uint32_t origin_len;
  void *meta;
} YUndoEvent;
void ystring_destroy(char *str);
void ybinary_destroy(char *ptr, uint32_t len);
YSubscription *ydoc_observe_updates_v1(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_updates_v2(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_after_transaction(YDoc *doc,
                                              void *state,
                                              void (*cb)(void*, struct YAfterTransactionEvent*));
YSubscription *ydoc_observe_subdocs(YDoc *doc,
                                    void *state,
                                    void (*cb)(void*, struct YSubdocsEvent*));
YSubscription *ydoc_observe_clear(YDoc *doc, void *state, void (*cb)(void*, YDoc*));
char *ytransaction_state_vector_v1(const YTransaction *txn, uint32_t *len);
char *ytransaction_state_diff_v1(const YTransaction *txn,
                                 const char *sv,
                                 uint32_t sv_len,
                                 uint32_t *len);
char *ytransaction_state_diff_v2(const YTransaction *txn,
                                 const char *sv,
                                 uint32_t sv_len,
                                 uint32_t *len);
char *ytransaction_snapshot(const YTransaction *txn, uint32_t *len);
char *ytransaction_encode_state_from_snapshot_v1(const YTransaction *txn,
                                                 const char *snapshot,
                                                 uint32_t snapshot_len,
                                                 uint32_t *len);
char *ytransaction_encode_state_from_snapshot_v2(const YTransaction *txn,
                                                 const char *snapshot,
                                                 uint32_t snapshot_len,
                                                 uint32_t *len);
struct YDeleteSet *ytransaction_pending_ds(const YTransaction *txn);
void ydelete_set_destroy(struct YDeleteSet *ds);
struct YPendingUpdate *ytransaction_pending_update(const YTransaction *txn);
void ypending_update_destroy(struct YPendingUpdate *update);
char *yupdate_debug_v1(const char *update, uint32_t update_len);
char *yupdate_debug_v2(const char *update, uint32_t update_len);
uint8_t ytransaction_apply(YTransaction *txn,
                           const char *diff,
                           uint32_t diff_len);
uint8_t ytransaction_apply_v2(YTransaction *txn,
                              const char *diff,
                              uint32_t diff_len);
uint32_t ytext_len(const Branch *txt, const YTransaction *txn);
char *ytext_string(const Branch *txt, const YTransaction *txn);
YSubscription *ytext_observe(const Branch *txt, void *state, void (*cb)(void*,
                                                                        const struct YTextEvent*,
                                                                        uint32_t,
                                                                        const char*));
YSubscription *ymap_observe(const Branch *map, void *state, void (*cb)(void*,
                                                                       const struct YMapEvent*));
YSubscription *yarray_observe(const Branch *array,
                              void *state,
                              void (*cb)(void*, const struct YArrayEvent*));
YSubscription *yxmlelem_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlEvent*));
YSubscription *yxmltext_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlTextEvent*));
YSubscription *yobserve_deep(Branch *ytype, void *state, void (*cb)(void*,
                                                                    uint32_t,
                                                                    const struct YEvent*));
YSubscription *yundo_manager_observe_added(YUndoManager *mgr,
                                           void *state,
                                           void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yundo_manager_observe_popped(YUndoManager *mgr,
                                            void *state,
                                            void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yweak_observe(const Branch *weak,
                             void *state,
                             void (*cb)(void*, const struct YWeakLinkEvent*));