lib/y_dart/ffi/y_dart_bindings_generated.dart


/// Returns a state vector of a current transaction's document, serialized using lib0 version 1
/// encoding. Payload created by this function can then be send over the network to a remote peer,
/// where it can be used as a parameter of [ytransaction_state_diff_v1] in order to produce a delta
/// update payload, that can be send back and applied locally in order to efficiently propagate
/// updates from one peer to another.
///
/// The length of a generated binary will be passed within a `len` out parameter.
///
/// Once no longer needed, a returned binary can be disposed using [ybinary_destroy] function.
@ffi.Native<
        ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'ytransaction_state_vector_v1', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> ytransaction_state_vector_v1(
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Uint32> len,
);

/// Returns a delta difference between current state of a transaction's document and a state vector
/// `sv` encoded as a binary payload using lib0 version 1 encoding (which could be generated using
/// [ytransaction_state_vector_v1]). Such delta can be send back to the state vector's sender in
/// order to propagate and apply (using [ytransaction_apply]) all updates known to a current
/// document, which remote peer was not aware of.
///
/// If passed `sv` pointer is null, the generated diff will be a snapshot containing entire state of
/// the document.
///
/// A length of an encoded state vector payload must be passed as `sv_len` parameter.
///
/// A length of generated delta diff binary will be passed within a `len` out parameter.
///
/// Once no longer needed, a returned binary can be disposed using [ybinary_destroy] function.
@ffi.Native<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<YTransaction>,
            ffi.Pointer<ffi.Char>, ffi.Uint32, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'ytransaction_state_diff_v1', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> ytransaction_state_diff_v1(
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> sv,
  int sv_len,
  ffi.Pointer<ffi.Uint32> len,
);

/// Returns a delta difference between current state of a transaction's document and a state vector
/// `sv` encoded as a binary payload using lib0 version 1 encoding (which could be generated using
/// [ytransaction_state_vector_v1]). Such delta can be send back to the state vector's sender in
/// order to propagate and apply (using [ytransaction_apply_v2]) all updates known to a current
/// document, which remote peer was not aware of.
///
/// If passed `sv` pointer is null, the generated diff will be a snapshot containing entire state of
/// the document.
///
/// A length of an encoded state vector payload must be passed as `sv_len` parameter.
///
/// A length of generated delta diff binary will be passed within a `len` out parameter.
///
/// Once no longer needed, a returned binary can be disposed using [ybinary_destroy] function.
@ffi.Native<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<YTransaction>,
            ffi.Pointer<ffi.Char>, ffi.Uint32, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'ytransaction_state_diff_v2', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> ytransaction_state_diff_v2(
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> sv,
  int sv_len,
  ffi.Pointer<ffi.Uint32> len,
);

/// Returns a snapshot descriptor of a current state of the document. This snapshot information
/// can be then used to encode document data at a particular point in time
/// (see: `ytransaction_encode_state_from_snapshot`).
@ffi.Native<
        ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'ytransaction_snapshot', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> ytransaction_snapshot(
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Uint32> len,
);

/// Encodes a state of the document at a point in time specified by the provided `snapshot`
/// (generated by: `ytransaction_snapshot`). This is useful to generate a past view of the document.
///
/// The returned update is binary compatible with Yrs update lib0 v1 encoding, and can be processed
/// with functions dedicated to work on it, like `ytransaction_apply`.
///
/// This function requires document with a GC option flag turned off (otherwise "time travel" would
/// not be a safe operation). If this is not a case, the NULL pointer will be returned.
@ffi.Native<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<YTransaction>,
            ffi.Pointer<ffi.Char>, ffi.Uint32, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'ytransaction_encode_state_from_snapshot_v1',
    assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> ytransaction_encode_state_from_snapshot_v1(
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> snapshot,
  int snapshot_len,
  ffi.Pointer<ffi.Uint32> len,
);

/// Encodes a state of the document at a point in time specified by the provided `snapshot`
/// (generated by: `ytransaction_snapshot`). This is useful to generate a past view of the document.
///
/// The returned update is binary compatible with Yrs update lib0 v2 encoding, and can be processed
/// with functions dedicated to work on it, like `ytransaction_apply_v2`.
///
/// This function requires document with a GC option flag turned off (otherwise "time travel" would
/// not be a safe operation). If this is not a case, the NULL pointer will be returned.
@ffi.Native<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<YTransaction>,
            ffi.Pointer<ffi.Char>, ffi.Uint32, ffi.Pointer<ffi.Uint32>)>(
    symbol: 'ytransaction_encode_state_from_snapshot_v2',
    assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> ytransaction_encode_state_from_snapshot_v2(
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> snapshot,
  int snapshot_len,
  ffi.Pointer<ffi.Uint32> len,
);

/// Returns an unapplied Delete Set for the current document, waiting for missing updates in order
/// to be integrated into document store.
///
/// Return `NULL` if there's no missing delete set and all deletions have been applied.
/// See also: `ytransaction_pending_update`
@ffi.Native<ffi.Pointer<YDeleteSet> Function(ffi.Pointer<YTransaction>)>(
    symbol: 'ytransaction_pending_ds', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YDeleteSet> ytransaction_pending_ds(
  ffi.Pointer<YTransaction> txn,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<YDeleteSet>)>(
    symbol: 'ydelete_set_destroy', assetId: 'package:y_dart/y_dart')
external void ydelete_set_destroy(
  ffi.Pointer<YDeleteSet> ds,
);

/// Returns a pending update associated with an underlying `YDoc`. Pending update contains update
/// data waiting for being integrated into main document store. Usually reason for that is that
/// there were missing updates required for integration. In such cases they need to arrive and be
/// integrated first.
///
/// Returns `NULL` if there is not update pending. Returned value can be released by calling
/// `ypending_update_destroy`.
/// See also: `ytransaction_pending_ds`
@ffi.Native<ffi.Pointer<YPendingUpdate> Function(ffi.Pointer<YTransaction>)>(
    symbol: 'ytransaction_pending_update', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YPendingUpdate> ytransaction_pending_update(
  ffi.Pointer<YTransaction> txn,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<YPendingUpdate>)>(
    symbol: 'ypending_update_destroy', assetId: 'package:y_dart/y_dart')
external void ypending_update_destroy(
  ffi.Pointer<YPendingUpdate> update,
);

/// Returns a null-terminated UTF-8 encoded string representation of an `update` binary payload,
/// encoded using lib0 v1 encoding.
/// Returns null if update couldn't be parsed into a lib0 v1 formatting.
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, ffi.Uint32)>(
    symbol: 'yupdate_debug_v1', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> yupdate_debug_v1(
  ffi.Pointer<ffi.Char> update,
  int update_len,
);

/// Returns a null-terminated UTF-8 encoded string representation of an `update` binary payload,
/// encoded using lib0 v2 encoding.
/// Returns null if update couldn't be parsed into a lib0 v2 formatting.
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, ffi.Uint32)>(
    symbol: 'yupdate_debug_v2', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> yupdate_debug_v2(
  ffi.Pointer<ffi.Char> update,
  int update_len,
);

/// Applies an diff update (generated by `ytransaction_state_diff_v1`) to a local transaction's
/// document.
///
/// A length of generated `diff` binary must be passed within a `diff_len` out parameter.
///
/// Returns an error code in case if transaction succeeded failed:
/// - **0**: success
/// - `ERR_CODE_IO` (**1**): couldn't read data from input stream.
/// - `ERR_CODE_VAR_INT` (**2**): decoded variable integer outside of the expected integer size bounds.
/// - `ERR_CODE_EOS` (**3**): end of stream found when more data was expected.
/// - `ERR_CODE_UNEXPECTED_VALUE` (**4**): decoded enum tag value was not among known cases.
/// - `ERR_CODE_INVALID_JSON` (**5**): failure when trying to decode JSON content.
/// - `ERR_CODE_OTHER` (**6**): other error type than the one specified.
@ffi.Native<
        ffi.Uint8 Function(
            ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>, ffi.Uint32)>(
    symbol: 'ytransaction_apply', assetId: 'package:y_dart/y_dart')
external int ytransaction_apply(
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> diff,
  int diff_len,
);

/// Applies an diff update (generated by [ytransaction_state_diff_v2]) to a local transaction's
/// document.
///
/// A length of generated `diff` binary must be passed within a `diff_len` out parameter.
///
/// Returns an error code in case if transaction succeeded failed:
/// - **0**: success
/// - `ERR_CODE_IO` (**1**): couldn't read data from input stream.
/// - `ERR_CODE_VAR_INT` (**2**): decoded variable integer outside of the expected integer size bounds.
/// - `ERR_CODE_EOS` (**3**): end of stream found when more data was expected.
/// - `ERR_CODE_UNEXPECTED_VALUE` (**4**): decoded enum tag value was not among known cases.
/// - `ERR_CODE_INVALID_JSON` (**5**): failure when trying to decode JSON content.
/// - `ERR_CODE_OTHER` (**6**): other error type than the one specified.
@ffi.Native<
        ffi.Uint8 Function(
            ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>, ffi.Uint32)>(
    symbol: 'ytransaction_apply_v2', assetId: 'package:y_dart/y_dart')
external int ytransaction_apply_v2(
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> diff,
  int diff_len,
);

/// Returns the length of the `YText` string content in bytes (without the null terminator character)
@ffi.Native<
        ffi.Uint32 Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'ytext_len', assetId: 'package:y_dart/y_dart')
external int ytext_len(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
);

/// Returns a null-terminated UTF-8 encoded string content of a current `YText` shared data type.
///
/// Generated string resources should be released using [ystring_destroy] function.
@ffi.Native<
        ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'ytext_string', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> ytext_string(
  ffi.Pointer<Branch> txt,
  ffi.Pointer<YTransaction> txn,
);
